# haskellAlgs

./: Dockerfile  README.md
algorithms/: algorithms.cabal
algorithms/spec/: Test.hs
algorithms/spec/sequence/: SequenceTest.hs
algorithms/spec/sorting/: SortingTest.hs
algorithms/src/: Main.hs  ShellSort.hs
algorithms/src/sequence/: Fibonacci.hs
algorithms/src/sorting/: HeapSort.hs  ShellSort.hs
